Setting up the SourceExtractor and tests.
I haven't started using it just yet, but that will be one of the next things that needs to happen.