@@ -7,6 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>asciidoc splitter</name>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.asciidoctor</groupId>
@@ -36,13 +40,18 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <source>13</source>
-          <target>13</target>
+          <release>13</release>
+          <compilerArgs>
+            --enable-preview
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
+        <version>3.0.0-M3</version>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
